se agrega branch nacho

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="photos/E- Elephan.jpg" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1581852017103-68ac65514cf7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2073&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
