--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="photos/E- Elephan.jpg" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1564760055775-d63b17a55c44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1777&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -104,11 +104,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">F</h1>
-                <h3>For </h3>
+                <h3>For Fork</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1619200913935-7ecf731b994f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2012&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -118,11 +118,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">G</h1>
-                <h3>For </h3>
+                <h3>For Gastronomy</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1571989569011-ff63072f08b0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1776&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -132,11 +132,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">H</h1>
-                <h3>For </h3>
+                <h3>For Horse</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image  -->
-                <img  class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1450052590821-8bf91254a353?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1920&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -146,11 +146,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">I</h1>
-                <h3>For </h3>
+                <h3>For Iceberg</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image  -->
-                <img  class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1543470373-e055b73a8f29?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -160,11 +160,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">J</h1>
-                <h3>For </h3>
+                <h3>For Jam</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image -->
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1632848129232-f816b590e5e3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -174,11 +174,11 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">K</h1>
-                <h3>For </h3>
+                <h3>For Key</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image -->
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1550527882-b71dea5f8089?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -187,11 +187,11 @@
         <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
         <div class="row">
             <div class="col-4">
-                <h1 class="display-1">k</h1>
-                <h3>For </h3>
+                <h1 class="display-1">L</h1>
+                <h3>For Lemon</h3>
             </div>
             <div class="col-8">
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1587496679742-bad502958fbf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -201,10 +201,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">M</h1>
-                <h3>For </h3>
+                <h3>For Money</h3>
             </div>
             <div class="col-8">
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -213,11 +213,11 @@
         <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
         <div class="row">
             <div class="col-4">
-                <h1 class="display-1"></h1>
-                <h3>For </h3>
+                <h1 class="display-1">N</h1>
+                <h3>For Net</h3>
             </div>
             <div class="col-8">
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1507124441518-c9584b9dc520?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -227,10 +227,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">O</h1>
-                <h3>For </h3>
+                <h3>For Orange</h3>
             </div>
             <div class="col-8">
-                <img src="" class="img-thumbnail">
+                <img src="https://images.unsplash.com/photo-1591206369811-4eeb2f03bc95?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -240,10 +240,10 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">P</h1>
-                <h3>For </h3>
+                <h3>For Pear</h3>
             </div>
             <div class="col-8">
-                <img src="" >
+                <img src="https://images.unsplash.com/photo-1531746808781-ce4c1b3a5ff2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" class="img-thumbnail">
             </div>
         </div>
         <hr>
@@ -265,7 +265,7 @@
         <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
         <div class="row">
             <div class="col-4">
-                <h1 class="display-1"></h1>
+                <h1 class="display-1">R</h1>
                 <h3>For </h3>
             </div>
             <div class="col-8">
