--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css"/>
 
 </head>
 
@@ -50,7 +51,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">B</h1>
-                <h3>For Beans</h3>
+                <h3 class="green" >For Beans</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
@@ -63,7 +64,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">C</h1>
-                <h3>For Coffee</h3>
+                <h3 class="green" >For Coffee</h3>
             </div>
             <div class="col-8">
                 <!-- Notice where the URL goes to -->
@@ -76,7 +77,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">D</h1>
-                <h3>For Duck</h3>
+                <h3 class="green">For Duck</h3>
             </div>
             <div class="col-8">
                 <!-- Notice where the URL goes to -->
@@ -90,7 +91,7 @@
         <div class="row">
             <div class="col-4">
                 <h1 class="display-1">E</h1>
-                <h3>For Elephan</h3>
+                <h3 id="red">For Elephan</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
